# genomic_one

./: Cargo.toml  README.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/brain/: layout.tsx
frontend/src/app/brain/advisory/: page.tsx
frontend/src/app/brain/architecture/: page.tsx
frontend/src/app/brain/federation/: page.tsx
frontend/src/app/brain/intelligence/: page.tsx
frontend/src/app/brain/learning/: page.tsx
frontend/src/app/brain/memories/: page.tsx
frontend/src/app/brain/pathways/: page.tsx
frontend/src/app/brain/simulate/: page.tsx
frontend/src/components/: BrainSidebar.tsx  DiseaseTrajectory.tsx  DnaLogo.tsx  EpigeneticClock.tsx  EvidenceBase.tsx  GenePanel.tsx  KmerHeatmap.tsx  PharmaDashboard.tsx  PipelineSummary.tsx  ProteinViewer.tsx  StreamingProgress.tsx  VariantBrowser.tsx
frontend/src/lib/: api.ts  static-data.ts
src/: analyze.rs  api.rs  main.rs
