[package]
name = "genomic_one"
version = "0.1.0"
edition = "2021"

[dependencies]
rvdna = "0.3"
anyhow = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
futures-util = "0.3"
